; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/minix/extr_dir.c_dir_get_page.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/minix/extr_dir.c_dir_get_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }
%struct.inode = type { %struct.address_space* }
%struct.address_space = type { i32 }

@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.page* (%struct.inode*, i64)* @dir_get_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.page* @dir_get_page(%struct.inode* %0, i64 %1) #0 {
  %3 = alloca %struct.page*, align 8
  %4 = alloca %struct.inode*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.address_space*, align 8
  %7 = alloca %struct.page*, align 8
  store %struct.inode* %0, %struct.inode** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load %struct.inode*, %struct.inode** %4, align 8
  %9 = getelementptr inbounds %struct.inode, %struct.inode* %8, i32 0, i32 0
  %10 = load %struct.address_space*, %struct.address_space** %9, align 8
  store %struct.address_space* %10, %struct.address_space** %6, align 8
  %11 = load %struct.address_space*, %struct.address_space** %6, align 8
  %12 = load i64, i64* %5, align 8
  %13 = call %struct.page* @read_mapping_page(%struct.address_space* %11, i64 %12, i32* null)
  store %struct.page* %13, %struct.page** %7, align 8
  %14 = load %struct.page*, %struct.page** %7, align 8
  %15 = call i32 @IS_ERR(%struct.page* %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %25, label %17

17:                                               ; preds = %2
  %18 = load %struct.page*, %struct.page** %7, align 8
  %19 = call i32 @kmap(%struct.page* %18)
  %20 = load %struct.page*, %struct.page** %7, align 8
  %21 = call i32 @PageUptodate(%struct.page* %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %17
  br label %27

24:                                               ; preds = %17
  br label %25

25:                                               ; preds = %24, %2
  %26 = load %struct.page*, %struct.page** %7, align 8
  store %struct.page* %26, %struct.page** %3, align 8
  br label %33

27:                                               ; preds = %23
  %28 = load %struct.page*, %struct.page** %7, align 8
  %29 = call i32 @dir_put_page(%struct.page* %28)
  %30 = load i32, i32* @EIO, align 4
  %31 = sub nsw i32 0, %30
  %32 = call %struct.page* @ERR_PTR(i32 %31)
  store %struct.page* %32, %struct.page** %3, align 8
  br label %33

33:                                               ; preds = %27, %25
  %34 = load %struct.page*, %struct.page** %3, align 8
  ret %struct.page* %34
}

declare dso_local %struct.page* @read_mapping_page(%struct.address_space*, i64, i32*) #1

declare dso_local i32 @IS_ERR(%struct.page*) #1

declare dso_local i32 @kmap(%struct.page*) #1

declare dso_local i32 @PageUptodate(%struct.page*) #1

declare dso_local i32 @dir_put_page(%struct.page*) #1

declare dso_local %struct.page* @ERR_PTR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
